# BoussinesqFluidSolver

./: .gitignore  CMakeLists.txt  buoyantfluid-solver.cc  test_convection.prm  test_heat_conduction.prm
applications/: CMakeLists.txt  convection_diffusion_rectangle.cc  convection_diffusion_rectangle.prm  main.cc
documentation/: Doxyfile  latex_macros.tex  main.tex  mainpage.txt  references.bib  text.tex
include/: assembly_data.h  assembly_data.templates.h  buoyant_fluid_solver.h  buoyant_fluid_solver.templates.h  conducting_fluid_solver.h  exceptions.h  geometric_utilities.h  gravity_field.h  grid_factory.h  initial_values.h  initial_values.templates.h  magnetic_diffusion_solver.h  parameters.h  postprocessor.h  postprocessor.templates.h  preconditioning.h  preconditioning.templates.h  snapshot_information.h  timestepping.h
old_documentation/: main.tex  references.bib
postprocessing/: postprocess_benchmark_requests.py  postprocess_global_averages.py
source/: CMakeLists.txt  assemble_system.cc  assembly_data.cc  buoyant_fluid_solver.cc  conducting_fluid_solver.cc  geometric_utilities.cc  gravity_field.cc  grid_factory.cc  initial_values.cc  linear_algebra.cc  local_magnetic_assemble.cc  local_stokes_assemble.cc  local_temperature_assemble.cc  magnetic_diffusion_solver.cc  main.cc  make_grid.cc  parameters.cc  postprocess_benchmark.cc  postprocess_solution.cc  postprocessor.cc  postprocessor.cc.orig  preconditioning.cc  setup.cc  snapshot_information.cc  snapshot_restart.cc  solve_magnetic.cc  solve_navier_stokes.cc  solve_temperature.cc  solver_base.cc  timestepping.cc  utility.cc
tests/: CMakeLists.txt  timestepping_coefficients.cc  (+7 more)
(+51 files in other folders)
